--- a/mysheet.css
+++ b/mysheet.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(back.webp);
+    background-image: url(medea/images/back.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
