--- a/mysheet.css
+++ b/mysheet.css
@@ -25,7 +25,7 @@ nav ul {
 nav a {
     display: inline-block;
     padding: 0.45rem 0.85rem;
-    color: #e12525;
+    color: #000000;
     text-decoration: none;
     font-weight: 600;
     border-radius: 6px;
@@ -52,8 +52,8 @@ nav img{
     background-color: rgb(39, 44, 69);
     color: white;
     text-align: center;
-    padding: 1rem;
-    position: relative;
+    padding: 10px ;
+    position: flex;
     bottom: 0;
     width: 100%;
     box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.365);
