--- a/css/mysheet.css
+++ b/css/mysheet.css
@@ -129,3 +129,63 @@ img{
     flex-shrink: 0;
    
 }
+main h2, main p {
+    text-align: center;
+    color: #000000; 
+}
+
+
+.project-buttons {
+    text-align: center; 
+    margin-bottom: 25px; 
+}
+.project-buttons button {
+    font-size: 16px;        
+    font-weight: bold;       
+    padding: 10px 20px;     
+    margin: 5px;            
+    border: none;           
+    border-radius: 5px;    
+    background-color: #006C35; 
+    color: white;            
+    cursor: pointer;      
+    transition: background-color 0.3s; 
+}
+.project-buttons button:hover {
+    background-color: #004a25;
+}
+
+
+
+#project-content-container {
+    width: 80%;              
+    margin: 20px auto;       
+    padding: 25px;           
+    
+  
+    background-color: rgba(255, 255, 255, 0.95); 
+    color: #333;             
+    
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1); 
+    
+   
+    text-align: right;
+    font-size: 18px;
+    line-height: 1.7;
+}
+
+#project-content-container img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 5px;
+    margin-bottom: 15px; 
+}
+.footer
+ {
+    color: white; 
+    text-align: center;
+    padding: 20px;
+    background-color: #333;
+}
