--- a/css/mysheet.css
+++ b/css/mysheet.css
@@ -14,6 +14,7 @@ body{
     background-color: rgba(90, 128, 181, 0.863);
     padding:2px;
     position: relative;
+    cursor: pointer;
 }
 
 nav ul {
