--- a/css/mysheet.css
+++ b/css/mysheet.css
@@ -195,3 +195,18 @@ main h2, main p {
     background-color: #333;
 }
 
+.mood-toggle {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: rgba(0, 0, 0, 0.489);
+    padding: 5px 10px;
+    border-radius: 50px;
+    font-size: 10px;
+}
+html:has(.mood-toggle input[value="dark"]:checked) {
+    color-scheme: dark;
+}
+html:has(.mood-toggle input[value="light"]:checked) {
+    color-scheme: light;
+}
