تعديل في تصميم و صفحات

--- a/css/mysheet.css
+++ b/css/mysheet.css
@@ -3,15 +3,12 @@ body{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background-image: url('../media/images/back.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    color: white;
+background-color: #F4F4F4; 
+color: #333333; 
 }
 
 .navbar {
-    background-color: rgba(90, 128, 181, 0.863);
+    background-color: #222831;
     padding:2px;
     position: relative;
     cursor: pointer;
@@ -31,7 +28,7 @@ nav ul {
 nav a {
     display: inline-block;
     padding: 0.45rem 0.85rem;
-    color: #000000;
+    color: #FFFFFF;
     text-decoration: none;
     font-weight: 600;
     border-radius: 6px;
@@ -55,7 +52,7 @@ nav img{
     margin:0;
 }
 .footer {
-    background-color: rgb(39, 44, 69);
+    background-color: #222831;
     color: white;
     text-align: center;
     padding: 10px ;
