--- a/css/mysheet.css
+++ b/css/mysheet.css
@@ -3,28 +3,30 @@ body{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-background-color: #F4F4F4; 
-color: #333333; 
+background-color: #d3d3d3; 
+color: #000000; 
     margin: 0;
     padding: 0;
 }
 
 body.dark-mode {
     background-color: #121212; 
-    color: #E0E0E0; 
+    color: #eeeeee; 
 }
 body.dark-mode #project-content-container {
     background-color: rgba(30, 30, 30, 0.95); 
-    color: #E0E0E0; 
+    color: #eeeeee; 
     border-color: #444;
 }
 
 body.dark-mode main h2, body.dark-mode main p {
-    color: #E0E0E0; 
+    color: #eeeeee; 
 }
 
 .navbar {
-    background-color: #222831;
+    background-color: #3333;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.365);
+    margin-bottom: 20px;
     padding:2px;
     position: relative;
     cursor: pointer;
@@ -51,7 +53,7 @@ nav a {
     transition: background-color 160ms ease, transform 120ms ease, color 160ms ease;
 }
 nav a:hover{
-    background: rgb(97, 129, 177);
+    background: rgb(58, 109, 42);
     transform: translateY(-2px);
     outline: none;
 }
@@ -68,11 +70,10 @@ nav img{
     margin:0;
 }
 .footer {
-    background-color: #222831;
+    background-color: #3333;
     color: white;
     text-align: center;
     padding: 20px ;
-    width: cover;
     box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.365);
     margin-top: auto;
     
@@ -87,11 +88,6 @@ nav img{
     background-image: url('../media/images/backof2030.jpg'); 
     background-size: cover;
     background-position: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    color: white;
 }
 
 
@@ -101,10 +97,7 @@ main h2, main p {
     text-align: center;
     color: #000000; 
 }
-main p1 {
-    text-align: center;
-    color: #ffffff; 
-}
+
 
 .project-buttons {
     text-align: center; 
@@ -153,13 +146,7 @@ main p1 {
     border-radius: 5px;
     margin-bottom: 15px; 
 }
-.footer
- {
-    color: white; 
-    text-align: center;
-    padding: 20px;
-    background-color: #333;
-}
+
 
 .mood-toggle {
     position: absolute;
