--- a/css/mysheet.css
+++ b/css/mysheet.css
@@ -3,28 +3,15 @@ body{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-background-color: #d3d3d3; 
+background-color: #F4F4F4; 
 color: #000000; 
     margin: 0;
     padding: 0;
-}
-
-body.dark-mode {
-    background-color: #121212; 
-    color: #eeeeee; 
-}
-body.dark-mode #project-content-container {
-    background-color: rgba(30, 30, 30, 0.95); 
-    color: #eeeeee; 
-    border-color: #444;
-}
-
-body.dark-mode main h2, body.dark-mode main p {
-    color: #eeeeee; 
+    font-family: Arial, sans-serif;
 }
 
 .navbar {
-    background-color: #3333;
+    background-color: #006C35;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.365);
     margin-bottom: 20px;
     padding:2px;
@@ -39,7 +26,8 @@ nav ul {
     align-items: center;
     justify-content: center;
     padding: 0;
-    margin: 0;}
+    margin: 0;
+}
     nav li {
     margin: 0;
 }
@@ -49,28 +37,24 @@ nav a {
     color: #FFFFFF;
     text-decoration: none;
     font-weight: 600;
+    font-size: 20px;
     border-radius: 6px;
     transition: background-color 160ms ease, transform 120ms ease, color 160ms ease;
 }
 nav a:hover{
-    background: rgb(58, 109, 42);
+    background: #004a25;
     transform: translateY(-2px);
-    outline: none;
 }
 
-nav{
-    font-size: 40px;
-}
 nav img{
     width: 100px;
     height: 80px;
     border-radius: 30%;
     margin-right: 15px;
     align-items: left;
-    margin:0;
 }
 .footer {
-    background-color: #3333;
+    background-color: #006C35;
     color: white;
     text-align: center;
     padding: 20px ;
@@ -78,9 +62,7 @@ nav img{
     margin-top: auto;
     
 }
-.footer button {
-    display: flex;
-}
+
 
 .hero-section {
     position: relative; 
@@ -157,9 +139,21 @@ main h2, main p {
     border-radius: 50px;
     font-size: 10px;
 }
-html:has(.mood-toggle input[value="dark"]:checked) {
-    color-scheme: dark;
+
+
+body.dark-mode {
+    background-color: #121212; 
+    color: #eeeeee; 
 }
-html:has(.mood-toggle input[value="light"]:checked) {
-    color-scheme: light;
+body.dark-mode #project-content-container {
+    background-color: rgba(30, 30, 30, 0.95); 
+    color: #eeeeee; 
+    border-color: #444;
 }
+
+body.dark-mode main h2, body.dark-mode main p {
+    color: #eeeeee; 
+}
+
+
+
