--- a/css/mysheet.css
+++ b/css/mysheet.css
@@ -68,7 +68,7 @@ nav img{
 
 .banner {
     height: 400px; 
-    background-image: url('../media/images/backof2030.jpg'); 
+    background-image: url('../images/backof2030.jpg'); 
     background-size: cover;
     background-position: center;
 }
